--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Niramit:wght@500&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Slightly Implusive</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
